--- a/roles/k3s/tasks/main.yml
+++ b/roles/k3s/tasks/main.yml
@@ -52,6 +52,9 @@
     force: yes
     dest: /etc/systemd/system/k3s.service.d/network.conf
     content: |
+      [Unit]
+      After=wg-quick@wg0.service
+
       [Service]
       ExecStart=
       ExecStart=/usr/bin/k3s agent --snapshotter=native --server {{ k3s_server_url }} --token {{ k3s_token['content'] | b64decode | trim }} --flannel-iface=wg0
@@ -59,15 +62,24 @@
 - name: set kubernetes ports
   set_fact:
     k3s_ports:
-      - 6443
-      - 8472
-      - 10250
-      - 2379:2380
       - 80
       - 443
+      - 2379:2380
+      - 4789
+      - 6443
+      - 8443
+      - 8472
+      - 9099
+      - 9100
+      - 9443
+      - 9796
+      - 10250
+      - 10254
+      - 30000:32767
     flannel_ports:
       - 8285
       - 8472
+      - 30000:32767
 
 - name: ufw allow k3s ports
   become: yes
@@ -89,10 +101,26 @@
     proto: udp
   loop: "{{ flannel_ports }}"
 
+- name: ufw allow k3s flannel ports
+  become: yes
+  ufw:
+    rule: allow
+    interface: cni0
+    direction: in
+    proto: udp
+  loop: "{{ flannel_ports }}"
+
+- name: allow routed for flannel
+  become: yes
+  ufw:
+    rule: allow
+    route: yes
+
 - name: Reload service k3s
   become: yes
   ansible.builtin.systemd:
     name: k3s
     no_block: yes
+    enabled: yes
     daemon_reload: yes
     state: restarted
