--- a/roles/wireguard/tasks/main.yml
+++ b/roles/wireguard/tasks/main.yml
@@ -1,4 +1,14 @@
 ---
+- name: Get the public key from peers
+  ignore_unreachable: yes
+  become: yes
+  ansible.builtin.slurp:
+    src: /etc/wireguard/publickey
+  register: publickeys
+  loop: "{{ groups._running |difference([inventory_hostname]) }}"
+  delegate_to: "{{ item }}"
+  ignore_unreachable: yes
+
 - name: Update repositories cache and install "wireguard" package
   when: ansible_facts['os_family'] == "Debian"
   become: yes
@@ -14,7 +24,7 @@
     state: present
 
 - name: install ufw
-  when: ansible_facts['os_family'] == "Archlinux"
+  when: ansible_facts['os_family'] == "Archlinux" and not 'k3s' in group_names
   become: yes
   community.general.pacman:
     name: ufw
@@ -75,15 +85,6 @@
       PreDown = iptables -t nat -D POSTROUTING -o {{ ansible_default_ipv4.interface }} -j MASQUERADE
       PreDown = ip6tables -t nat -D POSTROUTING -o {{ ansible_default_ipv4.interface }} -j MASQUERADE
 
-- name: Get the public key from peers
-  become: yes
-  ansible.builtin.slurp:
-    src: /etc/wireguard/publickey
-  register: publickeys
-  loop: "{{ groups._running |difference([inventory_hostname]) }}"
-  delegate_to: "{{ item }}"
-  ignore_unreachable: yes
-
 - name: get subnet from netmask
   set_fact:
     subnet: "{{ (ansible_default_ipv4.address + '/255.255.255.0') | ansible.netcommon.ipaddr('network/prefix') }}"
@@ -139,6 +140,7 @@
 
 - name: add mobile peers to server
   when: '"_wireguard" in group_names'
+  ignore_errors: true
   become: yes
   blockinfile:
     dest: "/etc/wireguard/wg0.conf"
@@ -168,6 +170,7 @@
     reload: yes
 
 - name: limit ssh on ufw
+  when: not 'k3s' in group_names
   become: yes
   ufw:
     rule: limit
@@ -175,27 +178,37 @@
     proto: tcp
 
 - name: ufw allow wireguard
+  when: not 'k3s' in group_names
   become: yes
   ufw:
     rule: allow
     port: 51820
     proto: udp
 
+- name: check if system is using systemd
+  command: ps -p 1
+  register: process_one
+
 - name: enable ufw
+  when: "'systemd' in process_one['stdout'] and not 'k3s' in group_names" 
   become: yes
   ufw:
     state: enabled
     policy: deny
 
 - name: allow forwarding from eth0 to wg on server
-  when: '"wireguard" in group_names'
+  when: '"wireguard" in group_names and not 'k3s' in group_names'
   become: yes
   ufw:
     rule: allow
     route: yes
 
+- debug:
+    msg: "{{ process_one['stdout'] }}"
+
 - name: Make sure ufw is enabled
   become: yes
+  when: "'systemd' in process_one['stdout'] and not 'k3s' in group_names"
   ansible.builtin.systemd:
     state: started
     name: ufw
@@ -203,6 +216,7 @@
 
 - name: Make sure wireguard is running
   become: yes
+  when: "'systemd' in process_one['stdout'] and not 'k3s' in group_names"
   ansible.builtin.systemd:
     state: restarted
     name: wg-quick@wg0
