--- a/roles/k3s/tasks/main.yml
+++ b/roles/k3s/tasks/main.yml
@@ -169,3 +169,17 @@
     enabled: yes
     daemon_reload: yes
     state: restarted
+
+- name: install open-iscsi
+  when: ansible_facts['os_family'] == "Archlinux"
+  become: yes
+  community.general.pacman:
+    name: open-iscsi
+    state: present
+
+- name: Ensure iscsid is started
+  become: yes
+  ansible.builtin.systemd:
+    name: iscsid
+    enabled: yes
+    state: started
